# database-mcp

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  cog.toml  glama.json  server.json
crates/backend/: Cargo.toml
crates/backend/src/: error.rs  identifier.rs  lib.rs  traits.rs  validation.rs
crates/mysql/: Cargo.toml  README.md
crates/mysql/assets/instructions/: default.md  default.pinned.md  read-only.md  read-only.pinned.md
crates/mysql/assets/tools/: create_database.md  drop_database.md  drop_table.md  explain_query.md  list_functions.md  list_procedures.md  list_tables.md  list_triggers.md  list_views.md  read_query.md  write_query.md
crates/mysql/src/: adapter.rs  connection.rs  handler.rs  lib.rs  mysql.rs  operations.rs  schema.rs  tools.rs  types.rs
crates/mysql/src/tools/: create_database.rs  definer_sql.rs  drop_database.rs  drop_table.rs  explain_query.rs  get_table_schema.rs  list_databases.rs  list_functions.rs  list_procedures.rs  list_tables.rs  list_triggers.rs  list_views.rs  mod.rs  read_query.rs  write_query.rs
crates/pii/: Cargo.toml  README.md
crates/pii/benches/: analyze.rs  anonymize.rs  common.rs  corpus.rs  redact.rs
crates/pii/benches/corpus/: api_key.toml  bank_account_uk.toml  credit_card.toml  crypto.toml  cvv.toml  email.toml  iban.toml  ip.toml  itin.toml  jwt_token.toml  mac_address.toml  nhs_number.toml  nino_uk.toml  passport_uk.toml  passport_us.toml  private_key.toml  routing_number_us.toml  sort_code_uk.toml  tax_id_ein.toml  url.toml  us_ssn.toml
crates/pii/corpus/: phone.toml  sin_ca.toml  vat_number.toml
crates/pii/src/: analyzer.rs  anonymizer.rs  context.rs  corpus.rs  entity.rs  error.rs  lib.rs  overlap.rs  pattern.rs  redact.rs  regex.rs  result.rs  score.rs
crates/pii/src/operator/: hash.rs  mask.rs  mod.rs  ops.rs
crates/pii/src/recognizer/: deny_list.rs  entity.rs  mod.rs  pattern_recognizer.rs  types.rs  validators.rs
crates/pii/src/recognizer/builtin/: all.rs  credit_card.rs  crypto.rs  email.rs  iban.rs  ip.rs  mod.rs  phone.rs  url.rs  us_ssn.rs
crates/pii/src/recognizer/pattern/: all.rs  api_key.rs  bank_account_uk.rs  credit_card.rs  crypto.rs  cvv.rs  email.rs  iban.rs  ip.rs  itin.rs  jwt_token.rs  mac_address.rs  mod.rs  nhs_number.rs  nino_uk.rs  passport_uk.rs  passport_us.rs  phone.rs  private_key.rs  routing_number_us.rs  sin_ca.rs  sort_code_uk.rs  tax_id_ein.rs  url.rs  us_ssn.rs  vat_number.rs
crates/pii/src/recognizer/rule/: phone.rs  sin_ca.rs  vat_number.rs
crates/pii/src/recognizer/validator/: aba_routing.rs  ein_prefix.rs  itin_range.rs  jwt_header.rs  keyword.rs  luhn.rs  luhn_sin.rs  mod.rs  mod11_nhs.rs  nino_blocklist.rs  phone_national.rs  private_key_type.rs  us_ssn.rs  vat_country_length.rs
crates/pii/src/recognizers/: email.rs  itin.rs  mod.rs  nino_uk.rs  passport_us.rs  us_ssn.rs
crates/pii/src/recognizers/ca/: mod.rs  sin_ca.rs
crates/pii/src/recognizers/can/: sin.rs
crates/pii/src/recognizers/de/: commercial_register.rs  driving_licence.rs  health_insurance.rs  id_card.rs  license_plate.rs  lifetime_physician_number.rs  medical_practice_id.rs  mod.rs  passport.rs  postcode.rs  social_security.rs  tax_id.rs  tax_number.rs
crates/pii/src/recognizers/deu/: commercial_register.rs  driving_licence.rs  health_insurance.rs  id_card.rs  license_plate.rs  lifetime_physician_number.rs  medical_practice_id.rs  passport.rs  postcode.rs  social_security.rs  tax_id.rs  tax_number.rs
crates/pii/src/validators/: de_health_insurance.rs  de_id_card.rs  de_social_security.rs  de_tax_id.rs  digits.rs  icao_mrz9.rs  lifetime_physician_number_de.rs  luhn.rs  medical_license_us.rs  medical_practice_id_de.rs  mod.rs  npi_us.rs  us_ssn.rs
crates/pii/tests/: analyzer.rs  analyzer_behaviour.rs  anonymizer.rs  anonymizer_acceptance.rs  anonymizer_roundtrip.rs  hash_determinism.rs
crates/pii/tests/corpus/: api_key.txt  bank_account_uk.txt  cvv.txt  itin.txt  jwt_token.txt  mac_address.txt  nhs_number.txt  nino_uk.txt  passport_uk.txt  passport_us.txt  private_key.txt  routing_number_us.txt  sin_ca.txt  sort_code_uk.txt  tax_id_ein.txt  vat_number.txt
crates/postgres/: Cargo.toml  README.md
crates/postgres/assets/: instructions.md  instructions.readonly.md
crates/postgres/assets/instructions/: default.pinned.md  read-only.pinned.md
crates/postgres/assets/tools/: create_database.md  drop_table.md  explain_query.md  list_databases.md  list_functions.md  list_materialized_views.md  list_procedures.md  list_tables.md  list_triggers.md  list_views.md  read_query.md  write_query.md
crates/postgres/src/: adapter.rs  connection.rs  handler.rs  lib.rs  operations.rs  postgres.rs  schema.rs  tools.rs  types.rs
crates/postgres/src/tools/: create_database.rs  drop_database.rs  drop_table.rs  explain_query.rs  get_table_schema.rs  list_databases.rs  list_functions.rs  list_materialized_views.rs  list_procedures.rs  list_tables.rs  list_triggers.rs  list_views.rs  read_query.rs  write_query.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: handler.rs  lib.rs  pagination.rs  redact.rs  server.rs  tool.rs  tools.rs  traits.rs  types.rs
crates/sql/: Cargo.toml  README.md
crates/sql/src/: connection.rs  error.rs  identifier.rs  lib.rs  pagination.rs  sanitize.rs  validation.rs
crates/sqlite/: Cargo.toml  README.md
crates/sqlite/assets/: instructions.readonly.md
crates/sqlite/assets/instructions/: default.md
crates/sqlite/assets/tools/: drop_table.md  explain_query.md  list_tables.md  list_triggers.md  list_views.md  read_query.md  write_query.md
crates/sqlite/src/: adapter.rs  connection.rs  handler.rs  lib.rs  operations.rs  schema.rs  sqlite.rs  tools.rs  types.rs
crates/sqlite/src/tools/: drop_table.rs  explain_query.rs  get_table_schema.rs  list_tables.rs  list_triggers.rs  list_views.rs  read_query.rs  write_query.rs
crates/sqlx-json/: Cargo.toml  README.md
crates/sqlx-json/src/: lib.rs  mysql.rs  numeric.rs  postgres.rs  sqlite.rs  traits.rs
crates/sqlx_to_json/: Cargo.toml
crates/sqlx_to_json/src/: lib.rs
(+142 files in other folders)
