[package]
name = "database-mcp-backend"
description = "Backend for database-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
