[package]
name = "database-mcp-postgres"
description = "PostgreSQL for database-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
database-mcp-backend = { workspace = true }
database-mcp-config = { workspace = true }
database-mcp-server = { workspace = true }
moka = { workspace = true }
rmcp = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
sqlx_to_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
