[package]
name = "database-mcp-sql"
description = "SQL validation and identifier utilities for database-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
database-mcp-server = { workspace = true }
sqlparser = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
