[package]
name = "sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
backend = { workspace = true }
mcp_core = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
sqlx_to_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
