[package]
name = "database-mcp-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
database-mcp-backend = { workspace = true }
database-mcp-config = { workspace = true }
rmcp = { workspace = true }
serde_json = { workspace = true }
database-mcp-server = { workspace = true }
sqlparser = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
sqlx-to-json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
