[package]
name = "sqlx-json"
description = "Database-agnostic row-to-JSON conversion for sqlx"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["mysql", "postgres", "sqlite", "chrono"] }

[lints]
workspace = true
